--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.8.1",
     "react-navi": "^0.11.0-beta.0",
     "react-scripts-mdx": "2.1.4",
+    "react-use-localstorage": "^3.0.0",
     "rimraf": "^2.6.2",
     "slugify": "^1.3.2"
   },
